fix section__title wrap

--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -61,6 +61,10 @@
 
 
 @media screen and (max-width: 1250px)
+  .section
+    &__title
+      font-size: 70px
+      text-wrap: nowrap
   .about
     &__title
       // font-size: 70px
@@ -109,6 +113,10 @@
     &__item
       width: 310px
       height: 212px
+@media screen and (max-width: 1150px)
+  .about
+    &__list
+      left: -200px
 @media screen and (max-width: 1100px)
   .page
     &__bg2
@@ -140,6 +148,7 @@
       &--gamepad
         left: 10%
     &__list
+      left: -135px
       transform-origin: right
   .service
     // &__title
